--- a/styles/style.css
+++ b/styles/style.css
@@ -48,4 +48,22 @@ header .menu {
 i {
   color: black;
   cursor: pointer;
+}
+
+@media (max-width: 1000px) {
+  header ul {
+    position: fixed;
+    top: 100px;
+    right: -100%;
+    background: yellowgreen;
+    width: 100%;
+    flex-direction: column;
+    align-items: center;
+    transition: right 0.5s linear;
+  }
+  header .menu {
+    display: block;
+    width: 100px;
+    text-align: center;
+  }
 }/*# sourceMappingURL=style.css.map */
