--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,53 +1,74 @@
 $base-color: #c561f6;
 
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: Arial, Helvetica, sans-serif;
-    list-style: none;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
+  list-style: none;
+}
+body {
+  background: rgb(210, 64, 210);
+}
+header {
+  width: 100%;
+  height: 100px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: fixed;
+  z-index: 99;
+  box-shadow: 0 0 10px burlywood;
+  background: floralwhite;
+  .logo {
+    flex: 1;
+    font-size: 25px;
+    margin-left: 50px;
+    text-transform: uppercase;
+  }
+  ul {
+    flex: 5;
+    display: flex;
+    justify-content: space-evenly;
+  }
+  a {
+    text-decoration: none;
+    font-size: 600;
+    text-transform: uppercase;
+  }
+  a:hover {
+    border-bottom: 2px solid cadetblue;
+  }
+  .menu {
+    font-size: 2.5em;
+    display: none;
+  }
   
 }
-body{
-    background: rgb(210, 64, 210);
-}
-header{
-    width: 100%;
-    height: 100px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    position: fixed;
-    z-index: 99;
-    box-shadow: 0 0 10px burlywood;
-    background: floralwhite;
-    .logo{
-        flex: 1;
-        font-size: 25px;
-        margin-left: 50px;
-        text-transform: uppercase;
-    }
-    ul{
-        flex: 5;
-        display: flex;
-        justify-content: space-evenly;
-    }
-    a{
-        text-decoration: none;
-        font-size: 600;
-        text-transform: uppercase;
-        
-    }
-    a:hover{
-        border-bottom: 2px solid cadetblue;
-    }
-    .menu{
-        font-size: 2.5em;
-        display: none;
-    }
+
+i {
+  color: black;
+  cursor: pointer;
 }
 
-i{
-    color: black;
-    cursor: pointer;
+@media (max-width: 1000px) {
+  header {
+    ul {
+      position: fixed;
+      top: 100px;
+      right: -100%;
+      background: yellowgreen;
+      width: 100%;
+      flex-direction: column;
+      align-items: center;
+      transition: right 0.5s linear;
+    }
+    .menu {
+      display: block;
+      width: 100px;
+      text-align: center;
+    }
+    
+  }
+  
 }
