--- a/styles/style.css
+++ b/styles/style.css
@@ -6,43 +6,50 @@
   list-style: none;
 }
 
-body {
-  background: rgb(210, 64, 210);
-}
-
-header {
+.header {
+  position: fixed;
+  top: 0;
+  left: 0;
   width: 100%;
-  height: 100px;
+  padding: 1.3rem 10%;
+  background: rgba(0, 0, 0, 0.1);
   display: flex;
   justify-content: space-between;
   align-items: center;
-  position: fixed;
-  z-index: 99;
-  box-shadow: 0 0 10px burlywood;
-  background: floralwhite;
+  z-index: 100;
 }
-header .logo {
-  flex: 1;
-  font-size: 25px;
-  margin-left: 50px;
-  text-transform: uppercase;
-}
-header ul {
-  flex: 5;
-  display: flex;
-  justify-content: space-evenly;
-}
-header a {
-  text-decoration: none;
-  font-size: 600;
-  text-transform: uppercase;
-}
-header a:hover {
-  border-bottom: 2px solid cadetblue;
-}
-header .menu {
-  font-size: 2.5em;
+.header #check {
   display: none;
+}
+.header .logo {
+  color: black;
+  font-size: 2rem;
+  margin-left: 50px;
+  font-size: 700;
+}
+.header .navbar a {
+  font-weight: 500;
+  text-decoration: none;
+  font-size: 1.15rem;
+  margin-left: 2.5rem;
+}
+.header .menu {
+  right: 0;
+  position: absolute;
+  font-size: 2.8rem;
+  color: azure;
+  cursor: pointer;
+  display: none;
+}
+
+.header::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  top: 0;
+  left: 0;
 }
 
 i {
@@ -50,20 +57,41 @@ i {
   cursor: pointer;
 }
 
-@media (max-width: 1000px) {
-  header ul {
-    position: fixed;
-    top: 100px;
-    right: -100%;
-    background: yellowgreen;
-    width: 100%;
-    flex-direction: column;
-    align-items: center;
-    transition: right 0.5s linear;
+@media (max-width: 992px) {
+  .header {
+    padding: 1.3rem 3%;
   }
-  header .menu {
+}
+@media (max-width: 768px) {
+  .header #check:checked ~ .menu #open {
+    display: none;
+  }
+  .header .menu {
+    display: inline-flex;
+  }
+  .header #check:checked ~ .menu #close {
     display: block;
-    width: 100px;
+  }
+  .header .navbar {
+    position: absolute;
+    left: 0;
+    top: 100%;
+    width: 100%;
+    height: 0;
+    padding-top: 0px;
+    padding-bottom: 0px;
+    background: rgba(0, 0, 0, 0.1);
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
+    transition: 0.3s ease;
+  }
+  .header .navbar a {
+    display: block;
+    font-size: 1.1rem;
     text-align: center;
+  }
+  .header #check:checked ~ .navbar {
+    height: 17rem;
   }
 }/*# sourceMappingURL=style.css.map */
