--- a/styles/style.scss
+++ b/styles/style.scss
@@ -7,68 +7,100 @@ $base-color: #c561f6;
   font-family: Arial, Helvetica, sans-serif;
   list-style: none;
 }
-body {
-  background: rgb(210, 64, 210);
-}
-header {
+
+.header {
+  position: fixed;
+  top: 0;
+  left: 0;
   width: 100%;
-  height: 100px;
+  padding: 1.3rem 10%;
+  background: rgba(0, 0, 0, 0.1);
   display: flex;
   justify-content: space-between;
   align-items: center;
-  position: fixed;
-  z-index: 99;
-  box-shadow: 0 0 10px burlywood;
-  background: floralwhite;
-  .logo {
-    flex: 1;
-    font-size: 25px;
-    margin-left: 50px;
-    text-transform: uppercase;
-  }
-  ul {
-    flex: 5;
-    display: flex;
-    justify-content: space-evenly;
-  }
-  a {
-    text-decoration: none;
-    font-size: 600;
-    text-transform: uppercase;
-  }
-  a:hover {
-    border-bottom: 2px solid cadetblue;
-  }
-  .menu {
-    font-size: 2.5em;
+  z-index: 100;
+  #check {
     display: none;
   }
+  .logo {
+    color: black;
+    font-size: 2rem;
+    margin-left: 50px;
+    font-size: 700;
+  }
+ 
+  .navbar {
+    a {
+      font-weight: 500;
+      text-decoration: none;
+      font-size: 1.15rem;
+      margin-left: 2.5rem;
+    }
+  }
   
+  .menu {
+    right: 0;
+    position: absolute;
+    font-size: 2.8rem;
+    color: azure;
+    cursor: pointer;
+    display: none;
+  }
 }
-
+.header::before {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  top: 0;
+  left: 0;
+}
 i {
   color: black;
   cursor: pointer;
 }
 
-@media (max-width: 1000px) {
-  header {
-    ul {
-      position: fixed;
-      top: 100px;
-      right: -100%;
-      background: yellowgreen;
-      width: 100%;
-      flex-direction: column;
-      align-items: center;
-      transition: right 0.5s linear;
-    }
+@media (max-width: 992px) {
+  .header {
+    padding: 1.3rem 3%;
+  }
+}
+@media (max-width: 768px) {
+  .header {
+    #check:checked ~ .menu #open {
+        display: none;
+      }
     .menu {
-      display: block;
-      width: 100px;
-      text-align: center;
+      display: inline-flex;
     }
     
+
+    
+    #check:checked ~ .menu #close {
+      display: block;
+    }
+    .navbar {
+      position: absolute;
+      left: 0;
+      top: 100%;
+      width: 100%;
+      height: 0;
+      padding-top: 0px;
+      padding-bottom: 0px;
+      background: rgba(0, 0, 0, 0.1);
+      display: flex;
+      flex-direction: column;
+      overflow: hidden;
+      transition: 0.3s ease;
+      a {
+        display: block;
+        font-size: 1.1rem;
+        text-align: center;
+      }
+    }
+    #check:checked ~ .navbar {
+      height: 17rem;
+    }
   }
-  
 }
