--- a/styles/style.css
+++ b/styles/style.css
@@ -6,13 +6,19 @@
   list-style: none;
 }
 
+body {
+  min-height: 100vh;
+  background-image: url(../public/assets/O928XS0.jpg);
+  background-size: cover;
+  background-position: center;
+}
+
 .header {
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   padding: 1.3rem 10%;
-  background: rgba(0, 0, 0, 0.1);
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -22,76 +28,83 @@
   display: none;
 }
 .header .logo {
-  color: black;
   font-size: 2rem;
-  margin-left: 50px;
-  font-size: 700;
+  color: aliceblue;
+  font-weight: 700;
+}
+.header .menu {
+  right: 5%;
+  position: absolute;
+  font-size: 2.8rem;
+  color: #fff;
+  cursor: pointer;
+  display: none;
 }
 .header .navbar a {
   font-weight: 500;
   text-decoration: none;
-  font-size: 1.15rem;
+  font-size: 1.5rem;
+  font-weight: 500;
   margin-left: 2.5rem;
-}
-.header .menu {
-  right: 0;
-  position: absolute;
-  font-size: 2.8rem;
-  color: azure;
-  cursor: pointer;
-  display: none;
+  color: black;
 }
 
 .header::before {
   content: "";
   position: absolute;
-  width: 100%;
-  height: 100%;
-  z-index: 1;
   top: 0;
   left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.1);
 }
 
-i {
-  color: black;
-  cursor: pointer;
-}
-
-@media (max-width: 992px) {
+@media (max-width: 990px) {
   .header {
-    padding: 1.3rem 3%;
+    padding: 1.3rem 5%;
   }
 }
 @media (max-width: 768px) {
   .header #check:checked ~ .menu #open {
     display: none;
   }
-  .header .menu {
-    display: inline-flex;
-  }
   .header #check:checked ~ .menu #close {
     display: block;
   }
+  .header .menu {
+    display: inline-flex;
+    color: black;
+  }
+  .header .menu #close {
+    display: none;
+  }
+  .header #check:checked ~ .navbar {
+    height: 17.7rem;
+  }
+  .header nav {
+    padding-top: 0px;
+  }
   .header .navbar {
     position: absolute;
-    left: 0;
     top: 100%;
+    left: 0;
     width: 100%;
     height: 0;
-    padding-top: 0px;
-    padding-bottom: 0px;
-    background: rgba(0, 0, 0, 0.1);
-    display: flex;
     flex-direction: column;
     overflow: hidden;
-    transition: 0.3s ease;
+    padding-top: 0;
+    padding-bottom: 0;
+    background: rgba(46, 7, 7, 0.1);
+    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
+    transition: 0.5s ease;
   }
   .header .navbar a {
     display: block;
     font-size: 1.1rem;
-    text-align: center;
+    color: black;
+    transform: translateY(-50px);
   }
-  .header #check:checked ~ .navbar {
-    height: 17rem;
+  .header #check:checked ~ .navbar a {
+    transform: translateY(0);
   }
 }/*# sourceMappingURL=style.css.map */
