--- a/styles/style.scss
+++ b/styles/style.scss
@@ -7,14 +7,18 @@ $base-color: #c561f6;
   font-family: Arial, Helvetica, sans-serif;
   list-style: none;
 }
-
+body {
+  min-height: 100vh;
+  background-image: url(../public/assets/O928XS0.jpg);
+  background-size: cover;
+  background-position: center;
+}
 .header {
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   padding: 1.3rem 10%;
-  background: rgba(0, 0, 0, 0.1);
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -23,84 +27,88 @@ $base-color: #c561f6;
     display: none;
   }
   .logo {
-    color: black;
     font-size: 2rem;
-    margin-left: 50px;
-    font-size: 700;
+    color: aliceblue;
+    font-weight: 700;
   }
- 
+  .menu {
+    right:5%;
+    position: absolute;
+    font-size: 2.8rem;
+    color: #fff;
+    cursor: pointer;
+    display: none;
+  }
   .navbar {
     a {
       font-weight: 500;
       text-decoration: none;
-      font-size: 1.15rem;
+      font-size: 1.5rem;
+      font-weight: 500;
       margin-left: 2.5rem;
+      color: black;
     }
-  }
-  
-  .menu {
-    right: 0;
-    position: absolute;
-    font-size: 2.8rem;
-    color: azure;
-    cursor: pointer;
-    display: none;
   }
 }
 .header::before {
   content: '';
   position: absolute;
-  width: 100%;
-  height: 100%;
-  z-index: 1;
   top: 0;
   left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.1);
+  
 }
-i {
-  color: black;
-  cursor: pointer;
-}
-
-@media (max-width: 992px) {
+@media (max-width: 990px) {
   .header {
-    padding: 1.3rem 3%;
+    padding: 1.3rem 5%;
   }
 }
 @media (max-width: 768px) {
   .header {
     #check:checked ~ .menu #open {
-        display: none;
-      }
-    .menu {
-      display: inline-flex;
+      display: none;
     }
-    
-
-    
     #check:checked ~ .menu #close {
       display: block;
     }
-    .navbar {
-      position: absolute;
-      left: 0;
-      top: 100%;
-      width: 100%;
-      height: 0;
-      padding-top: 0px;
-      padding-bottom: 0px;
-      background: rgba(0, 0, 0, 0.1);
-      display: flex;
-      flex-direction: column;
-      overflow: hidden;
-      transition: 0.3s ease;
-      a {
-        display: block;
-        font-size: 1.1rem;
-        text-align: center;
+    .menu {
+      display: inline-flex;
+      color: black;
+
+      #close {
+        display: none;
       }
     }
     #check:checked ~ .navbar {
-      height: 17rem;
+      height: 17.7rem;
+    }
+    nav {
+      padding-top: 0px;
+    }
+    .navbar {
+      position: absolute;
+      top: 100%;
+      left: 0;
+      width: 100%;
+      height: 0;
+      flex-direction: column;
+      overflow: hidden;
+      padding-top: 0;
+      padding-bottom: 0;
+      background: rgba(46, 7, 7, 0.1);
+            box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
+      transition: 0.5s ease;
+      a {
+        display: block;
+        font-size: 1.1rem;
+        color: black;
+        transform: translateY(-50px);
+      }
+    }
+    #check:checked ~ .navbar a {
+      transform: translateY(0);
     }
   }
 }
